# ego-evidence-routing

./: .gitignore  README.md  project_plan_v2.md  pyproject.toml  requirements.txt
clip_method/: processandgetframes.py  test2.ipynb
configs/: default.yaml  egotextvqa.yaml  egotextvqa_indoor.yaml  egotextvqa_outdoor.yaml  hdepic.yaml
scripts/: analyze_results.py  evaluate_results_llm.py  run_ablation.py  run_baseline.py  run_egotextvqa_ablation.py  run_egotextvqa_baseline.py  run_egotextvqa_longvideo.py  run_hdepic_ablation.py  run_routing.py  sbatch_baseline.sh  sbatch_egotextvqa_ablation.sh  sbatch_egotextvqa_longvideo.sh  sbatch_hdepic_ablation.sh
src/eer/: __init__.py
src/eer/data/: __init__.py  egotextvqa.py  frames.py  hdepic.py
src/eer/eval/: metrics.py
src/eer/routing/: __init__.py  oracle.py  predicted.py
src/eer/tools/: __init__.py  answer_guided.py  base.py  cascade.py  clip_retrieval.py  crop.py  hand.py  motion.py  object_tracking.py  ocr.py  sharpness_stability.py  stability.py  uniform.py  union.py
src/eer/utils/: logging.py  visualization.py
src/eer/vlm/: __init__.py  qwen.py
tests/: sbatch_ot_test.sh  test_data.py  test_object_tracking.py  test_tools.py  test_vlm.py
